--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -1,5 +1,5 @@
 .post {
-    
+    margin-bottom: 2em;
 }
 
 .head {
@@ -60,4 +60,28 @@
     text-transform: uppercase;
     font-size: 0.8em;
     color: grey;
+}
+
+.addComment{
+    margin-top: 6px;
+    border-bottom: 1px solid #efefef;
+    padding: 10px 0;
+    display: flex;
+}
+.addComment input{
+    background: none;
+    border: none;
+    height: 16px;
+    outline: none;
+    font:inherit;
+    padding: 0;
+    width: 90%;
+}
+.addComment ::placeholder { 
+    color: #999;
+}
+.addComment button{
+    color:#3897f0;
+    font-weight: 600;
+    font-size: 16px;
 }
