HW3 some bugs remaining

--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -8,11 +8,15 @@
 }
 
 .head img {
-    width: 100px;
+    max-width: 100px;
     border-radius: 100px;
 }
 
 .head h2 {
+    margin: 0 1em;
+}
+
+.head button {
     margin: 0 1em;
 }
 
@@ -48,4 +52,26 @@ p {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 5px;
+}
+
+.followBtn{
+    background: #3897f0;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-weight: 600;
+    margin:10px 0px;
+}
+.unfollowBtn{
+    background:transparent;
+    border: 1px solid #dbdbdb;
+    color: black;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-weight: 600;
+    margin:10px 0px;
+}
+/* this will change the cursor to indicate its clickability*/
+button{
+  cursor:pointer;
 }
